[tool.poetry]
name = "python-dvd"
version = "0.1.0"
description = "Python tool that bounces a DVD logo around your terminal"
authors = ["stijndcl"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_dvd"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
